@@ -17,3 +17,15 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType(Test) {
+    jvmArgs("--enable-preview")
+}
